<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_message_object"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:checked="true"
            android:buttonTint="@color/colorAccent"
            android:id="@+id/rb_bureau"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <RadioButton
            android:buttonTint="@color/colorAccent"
            android:id="@+id/rb_community_police"
            android:text="@string/community_police"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:buttonTint="@color/colorAccent"
            android:id="@+id/rb_police_inspector"
            android:text="@string/police_inspector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>

</LinearLayout>