<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:background="@color/colorBackGround"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/public_notive_tv"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/public_notice"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <View
            android:background="@color/colorWhite"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/service_info_tv"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@color/colorLBanner"
            android:textColor="@color/colorWhite"
            android:text="@string/service_information"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reminder_tv"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@color/colorLBanner"
            android:textColor="@color/colorWhite"
            android:text="@string/reminder"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <View
            android:background="@color/colorWhite"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/more_tv"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@color/colorRBanner"
            android:textColor="@color/colorWhite"
            android:text="@string/more"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>