<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/house_nothave_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/landlord_country" />

        <EditText
            android:id="@+id/landlord_country_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/not_set"
            android:textSize="13sp"
            android:background="@null"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/colorWhite"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/landlord_identity" />

        <EditText
            android:id="@+id/landlord_identity_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:gravity="right|center"
            android:hint="@string/not_set"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/colorWhite"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/landlord_name" />

        <EditText
            android:id="@+id/landlord_name_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:gravity="right|center"
            android:hint="@string/not_set"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/colorWhite"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/landlord_gender" />

        <EditText
            android:id="@+id/landlord_gender_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/not_set"
            android:textSize="13sp"
            android:background="@null"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/colorWhite"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/landlord_phone_number" />

        <EditText
            android:id="@+id/landlord_phone_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:inputType="phone"
            android:gravity="right|center"
            android:hint="@string/not_set"
            android:textSize="13sp"  />
    </RelativeLayout>
    </LinearLayout>
</merge>