<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/banner_vp"
        android:layout_width="match_parent"
        android:layout_height="150dp"></android.support.v4.view.ViewPager>

    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/register_tv"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="@string/registeration"
        android:layout_width="match_parent"
        android:layout_height="100dp" />
    
    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/law_tv"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@color/colorLBanner"
            android:textColor="@color/colorWhite"
            android:text="@string/foreign_laws"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <View
            android:background="@color/colorWhite"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/message_board_tv"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@color/colorRBanner"
            android:textColor="@color/colorWhite"
            android:text="@string/leave_message"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <View
        android:background="@color/colorBackGround"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>



</LinearLayout>